--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 	<img src="img/Logo.png" id="logo">
 	<div id ="subcount">
+		<iframe src="https://youcount.github.io/e/#!/TheCrinjeMasterJay" height="100" width="250" frameborder="0"></iframe>
 	</div>
 
 <!--These are the social buttons-->
