--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
 	<span id ="wut">
 		<h2 >Welcome to the Channel!</h2>
 		<h3> This Website is currently being worked on.<br> 
-			Since this a one-man project conducted by a 14-year old boy 
+			Since this a one-man project conducted by someone
 			with BASE knowledge for html and css, It might be a while till it is good.
-			<br>Hey, designing a website is HARD!<br>
+			<br>Hey, designing a website is HARD! :p<br>
 			NOTE: this website is better when visited on a computer<br>
-			Links to my youtube channel and merch in the bottom right!<br>
-			Merch Link coming soon!</h3>
+			Links to my youtube channel in the bottom right!<br>
+			more links coming soon!</h3>
 	</span>
 	<div id="wut2">
 		<h6 id="scroll">Scroll</h6><i class="fas fa-chevron-down" id="uparrow"></i><h6 id="up">up</h6>
-		<h2>About Me:<br></h2> <h3 id="bio">Joseph Kumpati is a 14-year old boy who's channel is based in Texas.
+		<h2>About Me:<br></h2> <h3 id="bio">Joseph Kumpati is a 14-year old guy who's channel is based in Texas.
 		While there is no complete confirmation of where the gamertag,
 		<strong>TheCrinjeMasterJay</strong>, came from,<br> we will input this information
 		on the page	as soon as it is confirmed.</h3>	
